data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_748.wast
;; 9. **Test Description**: Design a loop with a `br_if` based on the result of a complex mathematical function (e.g., factorial, logarithmic). Verify the loop exits correctly according to the precise function result.    - **Constraint**: Validate complete and precise evaluation of complex conditions for correct branching.    - **Incorrect Condition Evaluation**: Checks if complex condition evaluations in `br_if` lead to unintended results.

(assert_invalid
  (module
    (func (param i32) (result i32)
      (local.get 0)
      (i32.const 1)
      (loop (result i32)
        (i32.mul)
        (i32.const 1) 
        (i32.add)
        (local.tee 0)
        (i32.const 10)
        (i32.eq)
        (br_if 1)
      )
    )
  )
  "type mismatch"
)